fixes and ImageControllerTest WIP